gcc/testsuite/rust/rustc/ui/bad/bad-type-env-capture.rs
fn foo<T>() {
    fn bar(b: T) { } // { dg-error ".E0401." "" { target *-*-* } }
}
fn main() { }

